- scale with different results for men/women - review scales - handled yes/no questions

--- a/GeriatricHelper/Base.lproj/Help.storyboard
+++ b/GeriatricHelper/Base.lproj/Help.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fJr-Uu-Qtt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16G23a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fJr-Uu-Qtt">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -82,29 +83,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYI-uw-xnm">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4W-Ht-rgQ">
-                                        <rect key="frame" x="20" y="20" width="327" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </scrollView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K8a-XZ-vzI">
+                                <rect key="frame" x="16" y="72" width="343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="ZYI-uw-xnm" secondAttribute="bottom" id="91p-am-qoV"/>
-                            <constraint firstAttribute="trailing" secondItem="ZYI-uw-xnm" secondAttribute="trailing" id="XLa-qr-F0S"/>
-                            <constraint firstItem="ZYI-uw-xnm" firstAttribute="leading" secondItem="eVO-kg-cD9" secondAttribute="leading" id="tgi-UP-Oj9"/>
-                            <constraint firstItem="ZYI-uw-xnm" firstAttribute="top" secondItem="eVO-kg-cD9" secondAttribute="top" id="vMA-RP-7XW"/>
+                            <constraint firstItem="K8a-XZ-vzI" firstAttribute="leading" secondItem="eVO-kg-cD9" secondAttribute="leadingMargin" id="Bq8-2i-ecL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="K8a-XZ-vzI" secondAttribute="trailing" id="TnL-eE-s5O"/>
+                            <constraint firstItem="K8a-XZ-vzI" firstAttribute="top" secondItem="tTC-5S-mLH" secondAttribute="bottom" constant="8" id="c2u-bZ-zJ3"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="helpTopicText" destination="V4W-Ht-rgQ" id="X2q-XS-bSq"/>
+                        <outlet property="helpTopicText" destination="K8a-XZ-vzI" id="cze-aI-9uF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jxf-ym-6QS" userLabel="First Responder" sceneMemberID="firstResponder"/>
