--- a/GeriatricHelper/RightWrongQuestionTableViewCell.xib
+++ b/GeriatricHelper/RightWrongQuestionTableViewCell.xib
@@ -1,60 +1,113 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G24b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="RightWrongQuestionTableViewCell" customModule="GeriatricHelper" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="RightWrongQuestionTableViewCell" customModule="GeriatricHelper" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="102.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Roa-7H-7w8">
-                        <rect key="frame" x="16" y="11" width="42" height="21"/>
+                        <rect key="frame" x="8" y="8" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Asq-mn-wYa">
-                        <rect key="frame" x="266" y="7" width="46" height="30"/>
-                        <state key="normal" title="Wrong"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bWY-8J-K9a" userLabel="RightView">
+                        <rect key="frame" x="0.0" y="37" width="160" height="65.5"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Dp-O6-Pvd">
+                                <rect key="frame" x="55" y="8" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="6ND-JS-feq"/>
+                                    <constraint firstAttribute="height" constant="50" id="EMa-aR-eWN"/>
+                                </constraints>
+                                <state key="normal" title="Certo" image="right unselected"/>
+                                <connections>
+                                    <action selector="rightButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="O6q-hR-UKw"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5Dp-O6-Pvd" firstAttribute="centerX" secondItem="bWY-8J-K9a" secondAttribute="centerX" id="2EY-fv-vzA"/>
+                            <constraint firstItem="5Dp-O6-Pvd" firstAttribute="centerY" secondItem="bWY-8J-K9a" secondAttribute="centerY" id="h2n-P5-LOD"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="38U-eg-Q3r" userLabel="WrongView">
+                        <rect key="frame" x="159" y="37" width="160" height="65.5"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Asq-mn-wYa">
+                                <rect key="frame" x="55" y="8" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="D9m-91-8c9"/>
+                                    <constraint firstAttribute="width" constant="50" id="tKF-NR-6rG"/>
+                                </constraints>
+                                <state key="normal" title="Errado" image="wrong unselected"/>
+                                <connections>
+                                    <action selector="wrongButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="zEs-7a-0cd"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Asq-mn-wYa" firstAttribute="centerY" secondItem="38U-eg-Q3r" secondAttribute="centerY" id="Mvo-Hh-WS6"/>
+                            <constraint firstItem="Asq-mn-wYa" firstAttribute="centerX" secondItem="38U-eg-Q3r" secondAttribute="centerX" id="yio-YV-4gY"/>
+                        </constraints>
+                    </view>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TG1-rG-vr1">
+                        <rect key="frame" x="58" y="1" width="35" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="4kX-wq-Fbx"/>
+                            <constraint firstAttribute="width" secondItem="TG1-rG-vr1" secondAttribute="height" multiplier="1:1" id="lMt-rQ-3DF"/>
+                            <constraint firstAttribute="height" constant="35" id="wiv-ZB-wi3"/>
+                        </constraints>
+                        <state key="normal" title="Button" image="Info-50"/>
                         <connections>
-                            <action selector="wrongButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="zEs-7a-0cd"/>
-                        </connections>
-                    </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Dp-O6-Pvd">
-                        <rect key="frame" x="222" y="7" width="36" height="30"/>
-                        <state key="normal" title="Right"/>
-                        <connections>
-                            <action selector="rightButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="O6q-hR-UKw"/>
+                            <action selector="displayQuestionImage:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Kbd-F4-TFb"/>
                         </connections>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Roa-7H-7w8" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="RGI-tg-LB3"/>
-                    <constraint firstItem="5Dp-O6-Pvd" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="U9u-kn-Jyl"/>
-                    <constraint firstItem="Roa-7H-7w8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="Wn5-84-sS4"/>
-                    <constraint firstItem="Asq-mn-wYa" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="dYC-yR-nE7"/>
-                    <constraint firstAttribute="trailing" secondItem="Asq-mn-wYa" secondAttribute="trailing" constant="8" id="gwV-FA-Wiv"/>
-                    <constraint firstItem="Asq-mn-wYa" firstAttribute="leading" secondItem="5Dp-O6-Pvd" secondAttribute="trailing" constant="8" id="qZy-Dw-xNM"/>
+                    <constraint firstAttribute="topMargin" secondItem="Roa-7H-7w8" secondAttribute="top" id="8WY-3a-uGm"/>
+                    <constraint firstItem="bWY-8J-K9a" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.5" id="BvY-IR-32D"/>
+                    <constraint firstItem="38U-eg-Q3r" firstAttribute="top" secondItem="Roa-7H-7w8" secondAttribute="bottom" constant="8" id="Piu-oh-snN"/>
+                    <constraint firstItem="38U-eg-Q3r" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.5" id="SOC-No-601"/>
+                    <constraint firstAttribute="leadingMargin" secondItem="Roa-7H-7w8" secondAttribute="leading" id="XZL-aH-ZvM"/>
+                    <constraint firstItem="TG1-rG-vr1" firstAttribute="centerY" secondItem="Roa-7H-7w8" secondAttribute="centerY" id="Yrk-2j-6OU"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="bWY-8J-K9a" secondAttribute="bottom" constant="-8" id="a8Q-Lk-y1P"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="38U-eg-Q3r" secondAttribute="trailing" constant="-7" id="am8-PI-gPQ"/>
+                    <constraint firstItem="bWY-8J-K9a" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="bHK-sa-gmL"/>
+                    <constraint firstItem="TG1-rG-vr1" firstAttribute="leading" secondItem="Roa-7H-7w8" secondAttribute="trailing" constant="8" id="ffQ-qH-yny"/>
+                    <constraint firstItem="bWY-8J-K9a" firstAttribute="top" secondItem="Roa-7H-7w8" secondAttribute="bottom" constant="8" id="ipW-U7-eUX"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="38U-eg-Q3r" secondAttribute="bottom" constant="-8" id="xX3-bS-zGq"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="question" destination="Roa-7H-7w8" id="0bQ-42-kmx"/>
+                <outlet property="questionImage" destination="TG1-rG-vr1" id="M2e-5w-s7w"/>
                 <outlet property="rightButton" destination="5Dp-O6-Pvd" id="fhe-FY-pTE"/>
                 <outlet property="wrongButton" destination="Asq-mn-wYa" id="Qja-cp-2e2"/>
             </connections>
-            <point key="canvasLocation" x="-85" y="27"/>
+            <point key="canvasLocation" x="-93" y="-9.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Info-50" width="25" height="25"/>
+        <image name="right unselected" width="100" height="100"/>
+        <image name="wrong unselected" width="100" height="100"/>
+    </resources>
 </document>
